src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) bool cuda_GpuMat_empty_0(void* self);
extern "C" __declspec(dllexport) void* cuda_GpuMat_cudaPtr_0(void* self);
extern "C" __declspec(dllexport) void cuda_GpuMat_updateContinuityFlag_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_GpuMat_step_get(void* self);
extern "C" __declspec(dllexport) void cuda_GpuMat_Allocator_Delete(void* self);
extern "C" __declspec(dllexport) void cuda_GpuMatND_Delete(void* self);
extern "C" __declspec(dllexport) void cuda_HostMem_Delete(void* self);
extern "C" __declspec(dllexport) void* cuda_HostMem_New_0(int rows, int cols, int type, void* alloc_type);
extern "C" __declspec(dllexport) void* cuda_HostMem_New_1(cv::Size size, int type, void* alloc_type);
extern "C" __declspec(dllexport) void* cuda_HostMem_New_2(void* arr, void* alloc_type);
extern "C" __declspec(dllexport) void cuda_HostMem_swap_0(void* self, void* b);
extern "C" __declspec(dllexport) void* cuda_HostMem_clone_0(void* self);
extern "C" __declspec(dllexport) void cuda_HostMem_create_0(void* self, int rows, int cols, int type);
extern "C" __declspec(dllexport) void* cuda_HostMem_reshape_0(void* self, int cn, int rows);
extern "C" __declspec(dllexport) void* cuda_HostMem_createMatHeader_0(void* self);
extern "C" __declspec(dllexport) bool cuda_HostMem_isContinuous_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_HostMem_elemSize_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_HostMem_elemSize1_0(void* self);
extern "C" __declspec(dllexport) int cuda_HostMem_type_0(void* self);
extern "C" __declspec(dllexport) int cuda_HostMem_depth_0(void* self);
extern "C" __declspec(dllexport) int cuda_HostMem_channels_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_HostMem_step1_0(void* self);
extern "C" __declspec(dllexport) cv::Size cuda_HostMem_size_0(void* self);
extern "C" __declspec(dllexport) bool cuda_HostMem_empty_0(void* self);
extern "C" __declspec(dllexport) size_t cuda_HostMem_step_get(void* self);
extern "C" __declspec(dllexport) void cuda_Stream_Delete(void* self);
extern "C" __declspec(dllexport) void* cuda_Stream_New_0();
extern "C" __declspec(dllexport) void* cuda_Stream_New_1(size_t cudaFlags);
extern "C" __declspec(dllexport) bool cuda_Stream_queryIfComplete_0(void* self);
extern "C" __declspec(dllexport) void cuda_Stream_waitForCompletion_0(void* self);
extern "C" __declspec(dllexport) void cuda_Stream_waitEvent_0(void* self, void* event);
extern "C" __declspec(dllexport) void* cuda_Stream_Null_0();
extern "C" __declspec(dllexport) void* cuda_Stream_cudaPtr_0(void* self);
extern "C" __declspec(dllexport) void cuda_TargetArchs_Delete(void* self);
extern "C" __declspec(dllexport) bool cuda_TargetArchs_has_0(int major, int minor);
extern "C" __declspec(dllexport) bool cuda_TargetArchs_hasPtx_0(int major, int minor);
extern "C" __declspec(dllexport) bool cuda_TargetArchs_hasBin_0(int major, int minor);
extern "C" __declspec(dllexport) bool cuda_TargetArchs_hasEqualOrLessPtx_0(int major, int minor);
extern "C" __declspec(dllexport) bool cuda_TargetArchs_hasEqualOrGreater_0(int major, int minor);
extern "C" __declspec(dllexport) bool cuda_TargetArchs_hasEqualOrGreaterPtx_0(int major, int minor);
extern "C" __declspec(dllexport) bool cuda_TargetArchs_hasEqualOrGreaterBin_0(int major, int minor);
extern "C" __declspec(dllexport) void ocl_Device_Delete(void* self);
extern "C" __declspec(dllexport) void* ocl_Device_New_0();
extern "C" __declspec(dllexport) const char* ocl_Device_name_0(void* self);
extern "C" __declspec(dllexport) const char* ocl_Device_extensions_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_isExtensionSupported_0(void* self, const char* extensionName);
extern "C" __declspec(dllexport) const char* ocl_Device_version_0(void* self);
extern "C" __declspec(dllexport) const char* ocl_Device_vendorName_0(void* self);
extern "C" __declspec(dllexport) const char* ocl_Device_OpenCL_C_Version_0(void* self);
extern "C" __declspec(dllexport) const char* ocl_Device_OpenCLVersion_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_deviceVersionMajor_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_deviceVersionMinor_0(void* self);
extern "C" __declspec(dllexport) const char* ocl_Device_driverVersion_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_type_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_addressBits_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_available_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_compilerAvailable_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_linkerAvailable_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_doubleFPConfig_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_singleFPConfig_0(void* self);
extern "C" __declspec(dllexport) int ocl_Device_halfFPConfig_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_hasFP64_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_hasFP16_0(void* self);
extern "C" __declspec(dllexport) bool ocl_Device_endianLittle_0(void* self);